--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <title>day2 table:</title>
     </head>
     <body>
-      <h1>table </h1>
+      <h1>all table in the way </h1>
          <table border="1" cellspacing="0" cellpadding="0" align="center" width="400">
               <tbody align="center">
                   <tr>
